add swagger doc about user
